Sample data for kanban board

--- a/src/app/project-boards/create-project/create-project.component.html
+++ b/src/app/project-boards/create-project/create-project.component.html
@@ -1,4 +1,5 @@
 <div class="create-project-container">
   <input type="text" name="project-name" id="" placeholder="Enter your project name">
   <input type="text" name="project-description" id="" placeholder="Enter your project description">
+  <button (click)="createProject()">Create project</button>
 </div>
