--- a/src/app/project-boards/kanban-board/kanban-board.component.html
+++ b/src/app/project-boards/kanban-board/kanban-board.component.html
@@ -1,3 +1,5 @@
 <div class="kanban-board-container">
-  <app-kanban-swimlane **ngFor="let swimlane of swimlaneList"></app-kanban-swimlane>
+  <div class="board-columns">
+    <app-kanban-swimlane *ngFor="let swimlane of swimlaneList"></app-kanban-swimlane>
+  </div>
 </div>
