--- a/src/app/project-boards/kanban-swimlane/kanban-swimlane.component.html
+++ b/src/app/project-boards/kanban-swimlane/kanban-swimlane.component.html
@@ -2,7 +2,7 @@
   <div class="swimlane-title">
     <h2>Title</h2>
   </div>
+  <button (click)="createTicket()">Create new ticket</button>
   <div class="swimlane-tickets">
-    <app-kanban-story-ticket *ngFor="let item of storyTicketList"></app-kanban-story-ticket>
-
+    <app-kanban-story-ticket *ngFor="let item of storyTicketList" [swimlaneId]="swimlaneId" [ticketComponent]="item"></app-kanban-story-ticket>
 </div>
