--- a/src/app/project-boards/kanban-board/kanban-board.component.less
+++ b/src/app/project-boards/kanban-board/kanban-board.component.less
@@ -1,3 +1,9 @@
+.kanban-tab-component{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .kanban-board-container{
   position: absolute;
   width: 80vw;
@@ -9,4 +15,5 @@
   flex-direction: row;
   margin: 10vw;
   position: relative;
+  background-color: red;
 }
