--- a/src/app/project-boards/kanban-board/kanban-swimlane/kanban-swimlane.component.html
+++ b/src/app/project-boards/kanban-board/kanban-swimlane/kanban-swimlane.component.html
@@ -4,5 +4,5 @@
   </div>
   <button (click)="createTicket()">Create new ticket</button>
   <div class="swimlane-tickets">
-    <app-kanban-story-ticket *ngFor="let item of storyTicketList" [swimlaneId]="swimlaneId" [ticketComponent]="item"></app-kanban-story-ticket>
+    <app-kanban-story-ticket *ngFor="let item of storyTicketList2" [swimlaneId]="swimlaneId" [ticketComponent]="item"></app-kanban-story-ticket>
 </div>
