--- a/src/app/project-boards/kanban-tabs/kanban-tabs.component.html
+++ b/src/app/project-boards/kanban-tabs/kanban-tabs.component.html
@@ -1,6 +1,6 @@
 <div class="kanban-tab-component">
-  <button (click)="onClick()">Project menu</button>
-  <button (click)="onClick()">Kanban board</button>
-  <button (click)="onClick()">Kanban analytics</button>
-  <button (click)="onClick()">Kanban gantt chart</button>
+  <button (click)="navigateToProject()" class="tab-button">Project Menu</button>
+  <button (click)="navigateToBoard()" class="tab-button">Kanban Board</button>
+  <button (click)="navigateToAnalytics()" class="tab-button">Kanban Analytics</button>
+  <button (click)="navigateToGantt()" class="tab-button">Kanban Gantt Chart</button>
 </div>
