--- a/src/app/project-boards/kanban-tabs/kanban-tabs.component.html
+++ b/src/app/project-boards/kanban-tabs/kanban-tabs.component.html
@@ -1,6 +1,17 @@
 <div class="kanban-tab-component">
-  <button (click)="navigateToProject()" class="tab-button">Project Menu</button>
-  <button (click)="navigateToBoard()" class="tab-button">Kanban Board</button>
-  <button (click)="navigateToAnalytics()" class="tab-button">Kanban Analytics</button>
-  <button (click)="navigateToGantt()" class="tab-button">Kanban Gantt Chart</button>
+  <div class="tab-navigation">
+    <button (click)="navigateToProjectList()" class="tab-button">Projects</button>
+    <button (click)="navigateToProject()" class="tab-button">Project Details</button>
+    <button (click)="navigateToBoard()" class="tab-button">Kanban Board</button>
+    <button (click)="navigateToAnalytics()" class="tab-button">Analytics</button>
+    <button (click)="navigateToGantt()" class="tab-button">Gantt Chart</button>
+  </div>
+  
+  <div class="user-section" *ngIf="currentUser$ | async as user">
+    <div class="user-info">
+      <span class="user-name">{{ user.name }}</span>
+      <span class="user-role">({{ user.role }})</span>
+    </div>
+    <button (click)="logout()" class="logout-button">Logout</button>
+  </div>
 </div>
